# Project_Cygnus

./: .dockerignore  .env.docker  .env.example  .eslintrc.json  .gitignore  BACKEND_GUIDE.md  BUILD_COMPLETE.md  CLEANUP_SUMMARY.md  CODEBASE_HEALTH_REPORT.md  COMPLETION_SUMMARY.md  DASHBOARD_GUIDE.md  DASHBOARD_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Dockerfile  ENHANCEMENTS_COMPLETE.md  FINAL_BUILD_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_STATUS.md  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PHASE7_COMPLETE.md  PRODUCTION_READY.md  PROGRESS.md  PROJECT_PLAN.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_START.md  README.md  READY_TO_DEPLOY.md  SESSION_CONTEXT.md  SETUP.md  SETUP_COMMANDS.md  alembic.ini  build_loan.sh  (+17 more)
agents/: AutonomousAgent.d.ts  AutonomousAgent.d.ts.map  AutonomousAgent.js  AutonomousAgent.js.map  AutonomousAgent.ts
alembic/: env.py
config/: mainnet.json  testnet.json
dashboard/: .env.example  Dockerfile  README.md  build.sh  docker-compose.yml  index.html  package.json  start.sh  test-final-output.txt  test-output-current.txt  test-output.json  test-pbt-output.txt  test-pbt-output2.txt  test-results-final.json  test-results-final2.json  test-results.json  test-results.txt  test-results2.json  test-results3.json  vite.config.js
docs/: ARCHITECTURE_STACK.md  CI_CD_FIXES.md  COMPLETE_SETUP_SUMMARY.md  DEPLOYMENT.md  ENVIRONMENT_SETUP_COMPLETE.md  FINAL_SUMMARY.txt  FIXES_APPLIED.md  GETTING_STARTED.md  HOW_TO_RUN.md  INDEX.md  QUICKSTART.md  (+8 more)
(+282 files in other folders)
